fixed hero image bug and text spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,13 +121,13 @@ main {
 /* Hero Section */
 
 #hero1 {
-    height: 600px;
+    height: 500px;
     width: auto;
     background: url("../images/index/index_hero.webp") no-repeat center center / cover;
 }
 
 #hero-text {
-    padding-top: 40px;
+    padding-top: 75px;
     padding-left: 5px;
     padding-right: 5px;
     color: #ffffff;
@@ -469,6 +469,9 @@ footer {
         width: 200px;
         height: 125px;
     }
+    #hero1 {
+        height: 600px;
+}
 }
 
 /* Media query: tablets and larger (768px and up) */
@@ -497,10 +500,6 @@ footer {
 
     #hero1 {
         display: flex;
-    }
-
-    #hero-text {
-        padding-top: 75px;
     }
 
     #hero-text-body {
